--- a/battle-hexes-web/package.json
+++ b/battle-hexes-web/package.json
@@ -1,15 +1,25 @@
 {
   "name": "battle-hexes-web",
   "version": "1.0.0",
-  "main": "battle-draw.js",
+  "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "p5": "^1.11.0"
   }
 }
