--- a/battle-hexes-web/package.json
+++ b/battle-hexes-web/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "p5": "^1.11.0"
+    "p5": "^1.11.0",
+    "winston": "^3.17.0"
   }
 }
