add workflow_dispatch to api tests action

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -4,9 +4,7 @@ on:
   push:
     paths:
       - 'battle-hexes-api/**'
-  pull_request:
-    paths:
-      - 'battle-hexes-api/**'
+  workflow_dispatch:
 
 jobs:
   test:
