--- a/battle-hexes-web/package.json
+++ b/battle-hexes-web/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "lint": "eslint src/",
     "test": "jest",
     "build": "webpack",
-    "test-and-build": "npm test && npm run build"
+    "test-and-build": "npm run lint && npm test && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,11 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.18.0",
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "style-loader": "^4.0.0",
