remove e2e tests in ci for now

--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -35,10 +35,11 @@ jobs:
         working-directory: battle-hexes-web
         run: npm run build
 
-      - name: Install Playwright browsers
-        working-directory: battle-hexes-web
-        run: npx playwright install --with-deps
-
-      - name: Run e2e tests
-        working-directory: battle-hexes-web
-        run: npm run test:e2e
+      # TODO get these running on day!
+      # - name: Install Playwright browsers
+      #   working-directory: battle-hexes-web
+      #   run: npx playwright install --with-deps
+      # 
+      # - name: Run e2e tests
+      #   working-directory: battle-hexes-web
+      #   run: npm run test:e2e
