--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r battle_hexes_api/requirements.txt
-          pip install -r battle_hexes_api/requirements-test.txt
+          pip install -r requirements.txt
+          pip install -r requirements-test.txt
 
       - name: Run checks
         run: ./server-side-checks.sh
