--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PYTHONPATH=battle_hexes_core/src:battle_hexes_api/src:battle_agent_random/src:battle_agent_rl/src
+PYTHONPATH=battle_hexes_core/src:battle_hexes_api/src:battle_agent_rl/src
