--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: Run checks
         run: ./server-side-checks.sh
+
+      - name: Train Q-learning agent
+        run: ./battle_agent_rl/train_qlearning.sh 10
