--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -3,6 +3,10 @@ name: Deploy Web Project
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write  # ✅ Required for OIDC
+  contents: read   # ✅ Required for `actions/checkout`
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -28,6 +32,10 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
+
+      # TODO debugging step to verify AWS credentials
+      - name: Check AWS identity
+        run: aws sts get-caller-identity
 
       - name: Deploy placeholder
         run: echo "Deploy step not implemented"
