--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write  # Required for OIDC role assumption
+      id-token: write
       contents: read
 
     steps:
@@ -31,14 +31,40 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: latest
         run: |
-          echo "Building image using battle_hexes_api/Dockerfile..."
           docker build -f battle_hexes_api/Dockerfile -t $ECR_REPOSITORY:$IMAGE_TAG .
-
-          echo "Tagging image..."
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-          echo "Pushing image to ECR..."
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Done
-        run: echo "Image successfully pushed to ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}"
+  deploy-cloudformation:
+    name: Deploy CloudFormation Stack
+    runs-on: ubuntu-latest
+    needs: build-and-push-to-ecr
+
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials via OIDC
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy CloudFormation Stack
+        env:
+          VPC_ID: ${{ secrets.VPC_ID }}
+          SUBNET_IDS: ${{ secrets.SUBNET_IDS }} # Comma-separated string
+          ECR_IMAGE: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
+        run: |
+          aws cloudformation deploy \
+            --template-file infrastructure/ecs-backend-dev.yaml \
+            --stack-name battle-hexes-api-dev \
+            --capabilities CAPABILITY_NAMED_IAM \
+            --parameter-overrides \
+              VpcId=$VPC_ID \
+              SubnetIds=\"$SUBNET_IDS\" \
+              EcrImage=$ECR_IMAGE
