--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -57,11 +57,11 @@ jobs:
       - name: Deploy CloudFormation Stack
         env:
           VPC_ID: ${{ secrets.VPC_ID }}
-          SUBNET_IDS: ${{ secrets.SUBNET_IDS }} # Comma-separated string
+          RAW_SUBNET_IDS: ${{ secrets.SUBNET_IDS }} # Comma-separated string
           ECR_IMAGE: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
         run: |
           SUBNET_IDS=$(echo $RAW_SUBNET_IDS | tr ',' ' ')
-          
+
           aws cloudformation deploy \
             --template-file battle_hexes_api/ecs-backend.yml \
             --stack-name battle-hexes-api-dev \
