--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build
         working-directory: battle-hexes-web
-        run: npm run build
+        run: npm run build:dev
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
