--- a/battle-hexes-web/package.json
+++ b/battle-hexes-web/package.json
@@ -25,6 +25,7 @@
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
