--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -30,28 +30,31 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # (Optional but nice to have for emulation)
       - name: Set up QEMU
+        if: runner.arch != 'ARM64'
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push multi-arch Docker image to ECR
+      - name: Build and push Docker image to ECR (arm64 + cache)
         env:
           ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
+          set -euo pipefail
           SHORT_SHA="${IMAGE_TAG::12}"
 
           # Build/push both a unique tag and latest
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/arm64 \
             --provenance=false \
             -f battle_hexes_api/Dockerfile \
             -t "$ECR_REGISTRY/$ECR_REPOSITORY:$SHORT_SHA" \
             -t "$ECR_REGISTRY/$ECR_REPOSITORY:latest" \
+            --cache-from type=registry,ref=$ECR_REGISTRY/$ECR_REPOSITORY:buildcache \
+            --cache-to   type=registry,ref=$ECR_REGISTRY/$ECR_REPOSITORY:buildcache,mode=max \
             --push \
             .
 
@@ -93,6 +96,13 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # ✅ sanity check we actually have a value
+      - name: Sanity-check image output
+        run: |
+          set -euo pipefail
+          echo "IMAGE(digest) = ${{ needs.build-and-push-to-ecr.outputs.image_uri_digest }}"
+          test -n "${{ needs.build-and-push-to-ecr.outputs.image_uri_digest }}"
+
       - name: Deploy CloudFormation Stack (pin to digest)
         env:
           VPC_ID: ${{ secrets.VPC_ID }}
@@ -102,6 +112,7 @@ jobs:
           HOSTED_ZONE_ID: ${{ secrets.HOSTED_ZONE_ID }}
           API_DOMAIN_NAME: api-dev.battlehexes.com
         run: |
+          set -euo pipefail
           # Ensure the ECS App Auto Scaling service-linked role exists (first time only)
           if ! aws iam get-role --role-name AWSServiceRoleForApplicationAutoScaling_ECSService >/dev/null 2>&1; then
             aws iam create-service-linked-role --aws-service-name ecs.application-autoscaling.amazonaws.com
