--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -53,12 +53,37 @@ jobs:
         env:
           BUCKET_NAME: ${{ secrets.WEB_BUCKET_NAME }}
         run: |
+          # 1) Push all non-HTML assets with long-lived, immutable caching
           aws s3 sync battle-hexes-web/dist s3://$BUCKET_NAME \
-            --exclude "index.html" \
+            --exclude "*.html" \
             --cache-control "public, max-age=31536000, immutable" \
             --delete
-          aws s3 cp battle-hexes-web/dist/index.html s3://$BUCKET_NAME/index.html \
-            --cache-control "no-cache, max-age=0, must-revalidate"
+          # 2) Upload HTML entry points with no-cache headers
+          for page in index.html battle.html; do
+            if [ -f "battle-hexes-web/dist/$page" ]; then
+              aws s3 cp "battle-hexes-web/dist/$page" "s3://$BUCKET_NAME/$page" \
+                --cache-control "no-cache, max-age=0, must-revalidate" \
+                --content-type "text/html; charset=utf-8" \
+                --metadata-directive REPLACE
+            fi
+          done
+
+      - name: Invalidate CloudFront HTML
+        env:
+          STACK_NAME: battle-hexes-web
+        run: |
+          DIST_ID=$(aws cloudformation describe-stacks \
+            --stack-name "$STACK_NAME" \
+            --query "Stacks[0].Outputs[?OutputKey=='CloudFrontDistributionId'].OutputValue" \
+            --output text || true)
+
+          if [ -n "$DIST_ID" ] && [ "$DIST_ID" != "None" ]; then
+            aws cloudfront create-invalidation \
+              --distribution-id "$DIST_ID" \
+              --paths "/index.html" "/battle.html"
+          else
+            echo "No CloudFront distribution id found; skipping invalidation."
+          fi
 
       - name: Show stack outputs
         run: |
